# aioLLM

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/llm/api/: __init__.py  routes.py
src/llm/core/: client.py  config.py  exceptions.py
src/llm/providers/: anthropic.py  ollama.py  openai.py
src/llm/schemas/: requests.py
tests/: conftest.py
tests/unit/: test_anthropic.py  test_ollama.py  test_openai.py
